# minimal-bevy-wasm

./: Cargo.toml  README.md  index.html
.cargo/: config.toml
src/: canvas.rs  config.rs  main.rs
styles/: index.scss
