[package]
name = "minimal-bevy-wasm"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
bevy = { version = "0.6.1", default_features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
] }
raw-window-handle = "0.4.2"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
] }
